// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen enumeratorValues config import-export] should create the enumeratorValues: the enumeratorValues have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ enumeratorvalue [name: 'cfgObjectTest', enumerator: 'Environment/MediaType']
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen enumeratorValues config import-export] should skip the same enumeratorValues: the enumeratorValues have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= enumeratorvalue [name: 'cfgObjectTest', enumerator: 'Environment/MediaType']
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen enumeratorValues config import-export] should throw exception when new enumeratorValues to import miss mandatory properties enumeratorValues: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - enumeratorvalue [name: 'emptyCfgObjectTest', enumerator: 'null/MediaType']:
    - displayName
    - tenant
Missing dependencies:
  - enumeratorvalue [name: 'emptyCfgObjectTest', enumerator: 'null/MediaType']:
    - enumerator [null/MediaType]
",
  "stdout": "",
}
`;

exports[`[mutagen enumeratorValues config import-export] should update the modified enumeratorValues: the modified enumeratorValues have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ enumeratorvalue [name: 'cfgObjectTest', enumerator: 'Environment/MediaType']
Completed. 1 object(s) imported.
",
}
`;
